tests/negative/test_call_ret_type_undef.orb
data Foo;

fnc bar () Foo;

fnc main () () {
    bar;
};